fix: profile actions dropdown overflow

--- a/apps/web/src/styles/components/overrides/tab.css
+++ b/apps/web/src/styles/components/overrides/tab.css
@@ -1,6 +1,7 @@
 /* Remove border */
 .fr-tabs {
   box-shadow: unset;
+  overflow: unset;
 
   &::before {
     box-shadow: inset 0 1px 0 0 var(--border-default-grey);
