--- a/apps/web/src/styles/dsfr/dsfr-overrides.css
+++ b/apps/web/src/styles/dsfr/dsfr-overrides.css
@@ -311,18 +311,6 @@
   }
 }
 
-/* Tabs */
-
-/* Remove border */
-
-.fr-tabs {
-  box-shadow: unset;
-
-  &::before {
-    box-shadow: inset 0 1px 0 0 var(--border-default-grey);
-  }
-}
-
 /* Modals */
 
 .fr-modal {
