--- a/apps/web/src/styles/helpers/position.css
+++ b/apps/web/src/styles/helpers/position.css
@@ -9,3 +9,7 @@
 .fr-overflow-visible {
   overflow: visible;
 }
+
+.fr-overflow-hidden {
+  overflow: hidden;
+}
